Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "import string\n",
     "\n",
     "df_smaller['cleaned'] = df_smaller['Consumer complaint narrative'].apply(\n",
-    "    lambda x: x.lower()\n",
+    "    lambda x: set(x.lower()\n",
     "               .translate(str.maketrans('', '', string.punctuation))\n",
     "               .replace('xxxx', '')\n",
     "               .replace('\\n', '')\n",
