Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,32 +140,32 @@
     "               .translate(str.maketrans('', '', string.punctuation))\n",
     "               .replace('xxxx', '')\n",
     "               .replace('\\n', '')\n",
-    "               .split()\n",
+    "               .split())\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29561    [i, want, to, file, a, bait, and, switch, comp...\n",
-       "26640    [i, am, an, account, holder, for, my, personal...\n",
-       "24498    [they, took, my, whole, social, security, chec...\n",
-       "24594    [this, is, in, dispute, of, my, case, number, ...\n",
-       "24249    [my, bluebird, card, that, i, used, for, bill,...\n",
-       "22744    [i, submitted, an, application, to, deposit, 4...\n",
-       "35431    [on, 2016, we, received, a, past, due, notice,...\n",
-       "37308    [i, completed, and, paid, off, my, loan, in, a...\n",
-       "19137    [on, 2016, i, received, an, email, at, that, m...\n",
-       "12014    [am, ex, customer, service, is, horrendous, i,...\n",
+       "29561    {their, point, posted, help, income, made, pri...\n",
+       "26640    {savings, running, over, lawyer, fully, did, a...\n",
+       "24498    {my, turned, bills, no, got, they, whole, had,...\n",
+       "24594    {their, person, my, holding, s, who, from, tel...\n",
+       "24249    {there, over, ve, have, loan, my, find, depart...\n",
+       "22744    {there, stall, ss, new, have, needs, listening...\n",
+       "35431    {there, discovered, highlighted, made, loan, c...\n",
+       "37308    {when, for, on, a, to, took, loan, have, i, un...\n",
+       "19137    {wait, help, saving, new, have, my, explaining...\n",
+       "12014    {there, way, hate, remove, over, like, posted,...\n",
        "Name: cleaned, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
